--- a/teachers.html
+++ b/teachers.html
@@ -256,11 +256,11 @@
               <img
                 src="./images/jakkrit.png"
                 alt="Jakkrit"
-                class=" jakkkrit teacher__width"
+                class=" jakkrit teacher__width"
               />
             </div>
             <div class="absolute_teacher">
-              <div class="relative_teacher">
+              <div class="relative_teacher ">
                 <div class="content number-1">
                   <p class="teacher__name">นายจักรกฤษณ์ อุปยโส</p>
                   <p class="teacher__port__text">จบการศึกษา</p>
@@ -276,7 +276,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="relative_teacher__2">
+              <div class="relative_teacher__2 ">
                 <div class="content number-2" style="display: none">
                   <p class="teacher__name">นายจักรกฤษณ์ อุปยโส</p>
                   <p class="teacher__port__text">ตำแหน่งปัจจุบัน</p>
@@ -302,7 +302,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="relative_teacher__3">
+              <div class="relative_teacher__3 ">
                 <div class="content number-3" style="display: none">
                   <p class="teacher__name">นายจักรกฤษณ์ อุปยโส</p>
                   <p class="teacher__port__text">ผลงาน</p>
@@ -340,7 +340,7 @@
               <img
                 src="./images/rachata.png"
                 alt="Jakkrit"
-                class="img-fluid jakkkrit"
+                class="img-fluid rachata"
               />
             </div>
             <div class="absolute_teacher">
@@ -429,11 +429,11 @@
               <img
                 src="./images/akom.png"
                 alt="akom"
-                class="img-fluid jakkkrit"
+                class="img-fluid akom"
               />
             </div>
             <div class="absolute_teacher">
-              <div class="relative_teacher_akom">
+              <div class="relative_teacher is_akom akom_align">
                 <div class="content number-1" style="display: none">
                   <p class="teacher__name">นายอาคม พรรณนิกร</p>
                   <p class="teacher__port__text">จบการศึกษา</p>
@@ -460,7 +460,7 @@
                     </li>
                     <li>
                       Level II (2) Certified Infrared Thermography (IR ) Batch 1
-                      (Institute of Infrared Thermography (IRT) USA
+                      (Institute of Infrared Thermography (IRT) USA)
                     </li>
                     <li>
                       CW-007 VTOL UAV Pilot License Certificate Batch 1
@@ -488,7 +488,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="relative_teacher__3">
+              <div class="relative_teacher__3 is_akom_3" >
                 <div class="content number-3" style="display: none">
                   <p class="teacher__name">นายอาคม พรรณนิกร</p>
                   <p class="teacher__port__text">ผลงาน</p>
@@ -539,7 +539,7 @@
               <img
                 src="./images/pongpol.png"
                 alt="akom"
-                class="img-fluid jakkkrit"
+                class="img-fluid pongpol"
               />
             </div>
             <div class="absolute_teacher">
@@ -622,7 +622,7 @@
               <img
                 src="./images/teerayut.png"
                 alt="akom"
-                class="img-fluid jakkkrit"
+                class="img-fluid teerayut"
               />
             </div>
             <div class="absolute_teacher">
@@ -667,11 +667,11 @@
               <img
                 src="./images/parinya.png"
                 alt="akom"
-                class="img-fluid jakkkrit"
+                class="img-fluid parinya"
               />
             </div>
             <div class="absolute_teacher">
-              <div class="relative_teacher">
+              <div class="relative_teacher align-center_one">
                 <div class="content number-1" style="display: none">
                   <p class="teacher__name">นายปรัชญา โสภา</p>
                   <p class="teacher__port__text">จบการศึกษา</p>
@@ -694,7 +694,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="relative_teacher__3">
+              <div class="relative_teacher__3 is_parinya">
                 <div class="content number-3" style="display: none">
                   <p class="teacher__name">นายปรัชญา โสภา</p>
                   <p class="teacher__port__text">ผลงาน</p>
@@ -735,56 +735,57 @@
           <div class="d-flex flex-row gap-4">
             <div>
               <img
-                src="./images/parinya.png"
+                src="./images/chonlatee.png"
                 alt="akom"
-                class="img-fluid jakkkrit"
+                class="img-fluid chonlatee"
               />
             </div>
             <div class="absolute_teacher">
               <div class="relative_teacher">
                 <div class="content number-1" style="display: none">
-                  <p class="teacher__name">นายปรัชญา โสภา</p>
+                  <p class="teacher__name">นายชลธี ชัยมาลิก</p>
                   <p class="teacher__port__text">จบการศึกษา</p>
                   <ul class="teacher_port__list">
                     <li>
-                      ปริญญาตรี มหาวิทยาลัยเทคโนโลยีสุรนารี วิศวกรรมศาสตร์บัณฑิต สาขาวิศวกรรมธรณี
+                      Bachelor's degree in Computer Engineering Technology(RMUTR)
                     </li>
                   </ul>
                 </div>
               </div>
               <div class="relative_teacher__2">
                 <div class="content number-2" style="display: none">
-                  <p class="teacher__name">นายปรัชญา โสภา</p>
+                  <p class="teacher__name">นายชลธี ชัยมาลิก</p>
                   <p class="teacher__port__text">ตำแหน่งปัจจุบัน</p>
                   <ul class="teacher_port__list">
                     <li>
-                      วิศวกรสนับสนุนด้านเทคนิค ฝ่ายอากาศยานไร้คนขับ บริษัท
-                      ซิสทรอนิกส์ จำกัด
+                      Remote Pilot Team Leader (2022 - Present)
                     </li>
+                    <li>หัวหน้า วิศวกรสนับสนุนด้านเทคนิค ฝ่ายอากาศยานไร้คนขับ บริษัท ซิสทรอนิกส์ จํากัด</li>
                   </ul>
                 </div>
               </div>
-              <div class="relative_teacher__3">
+              <div class="relative_teacher__3 is_chonlathee chonlatee_align">
                 <div class="content number-3" style="display: none">
-                  <p class="teacher__name">นายปรัชญา โสภา</p>
+                  <p class="teacher__name">นายชลธี ชัยมาลิก</p>
                   <p class="teacher__port__text">ผลงาน</p>
                   <ul class="teacher_port__list">
                     <li>
-                      JOUAV: Fix wing & VTOL course, JOUAV Ltd., China 2021
+                      Multi-Rotor course, DJI China 2019
                     </li>
                     <li>
-                      Remote Pilot Visual Line of Sight Certificate (RVC) Batch
-                      8 (DTI-UTC)
+                      JOUAV: Fix wing & VTOL course, JOUAV Ltd., China 2019
                     </li>
                     <li>
-                      Instructor Remote Pilot Certificate (Multi-rotor) Batch 3
-                      (DTI-UTC)
+                      Remote Pilot Agriculture Certificate (RAC) Batch 4 (Easy (2021) Co., Ltd.)
                     </li>
                     <li>
-                      Remote Pilot Visual Line of Sight Certificate
-                      (RVC)-Fixed-Wing Batch 4 (DTI-UTC)
+                      Drone Specialist Delivery Type DJI Academy 2024
                     </li>
-                    <li>Drone Specialist Delivery Type DJI Academy 2024</li>
+                    <li>Remote Pilot Visual Line of Sight Certificate (RVC) Batch 7 (DTI-UTC)</li>
+                    <li>Instructor Remote Pilot Certificate (Multi-rotor) Batch 2 (DTI-UTC)</li>
+                    <li>Remote Pilot Visual Line of Sight Certificate (RVC)-Fixed-Wing Batch 4 (DTI-UTC)</li>
+                    <li>Level I (1) Certified Infrared Thermography (IR) Batch 1 (Institute of Infrared Thermography (IRT) USA)</li>
+                    <li>Level II (2) Certified Infrared Thermography (IR) Batch 1 (Institute of Infrared Thermography (IRT) USA)</li>
                   </ul>
                 </div>
               </div>
@@ -807,7 +808,7 @@
               <img
                 src="./images/jarukit.png"
                 alt="akom"
-                class="img-fluid jakkkrit"
+                class="img-fluid jarukit"
               />
             </div>
             <div class="absolute_teacher">
@@ -830,7 +831,7 @@
               </div>
               <div class="relative_teacher__2">
                 <div class="content number-2" style="display: none">
-                  <p class="teacher__name">นายปรัชญา โสภา</p>
+                  <p class="teacher__name">นายจารุกิตติ์ คงหาญ</p>
                   <p class="teacher__port__text">ตำแหน่งปัจจุบัน</p>
                   <ul class="teacher_port__list">
                     <li>
@@ -1063,10 +1064,37 @@
         togglePerson("first-person");
       });
     </script>
- 
+  <script>
+$(document).ready(function () {
+  function updateClasses() {
+    if ($(window).width() <= 1530) {
+      $(".is_akom").addClass("has_akom"); 
+      $(".is_akom_3").addClass("has_akom_3");
+      $(".is_parinya").addClass("has_parinya");
+      $(".is_chonlathee").addClass("has_chonlathee");
+      $(".relative_teacher").addClass("align-center-one");
+      $(".relative_teacher__2").addClass("align-center-two");
+      
+    } else {
+      $(".is_akom_3").removeClass("has_akom_3");
+      $(".is_akom").removeClass("has_akom"); 
+      $(".is_parinya").removeClass("has_parinya");
+      $(".is_chonlathee").removeClass("has_chonlathee");  // ลบ name เมื่อหน้าจอ > 1530px
+    }
+  }
+
+  // รันเมื่อล็อดหน้าเว็บ
+  updateClasses();
+
+  // รันเมื่อเปลี่ยนขนาดหน้าจอ
+  $(window).resize(function () {
+    updateClasses();
+  });
+});
+
+  </script>
 
 
-    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
     <script src="/js/teacher.js"></script>
